--- a/Turizmas Lietuvoje/CSS/style.css
+++ b/Turizmas Lietuvoje/CSS/style.css
@@ -1,7 +1,16 @@
+/*
+Colors:
+color: #0C356A;
+color: #0174BE;
+color: #03C988;
+*/
+
 main{
     font-size: 40px;
     line-height: 30px;
 }
+
+/*HEADER*/
 
 .navBar{
     position: fixed;
@@ -9,9 +18,9 @@ main{
     top: 0;
     width: 100%;
     height: 100px;
-    background: rgba(0, 0, 0, 0.8);
+    background: #0c356a;
     transform: 0.5s;
-    padding: 0 200px;
+    padding: 0 100px;
     transition: 0.5s;
 }    
 
@@ -21,24 +30,25 @@ main{
     text-transform: none;
     font-size: 32px;
     font-weight: 600;
-    display: 1inline-block;
     text-decoration: none;
+    margin-right: 50px;
 }    
 
 .navBar ul{
     list-style: none;
     float: right;
-    line-height: 100px;
+    line-height: 70px;
+    margin-right: 250px;
 }
     
 .navBar ul li{
     display: inline-block;
-    padding: 0 20px;
-    
+    padding-right: 10px;
+    padding-left: 10px;
 }
     
 .navBar ul li a{
-    color: #e9c46a;
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 600;
@@ -46,7 +56,7 @@ main{
 }
 
 .navBar ul li a:hover{
-    color: #fff;
+    color: #03C988;
 }
 
 .navBar.animate{
