--- a/Turizmas Lietuvoje/CSS/style.css
+++ b/Turizmas Lietuvoje/CSS/style.css
@@ -22,31 +22,30 @@ main{
     transform: 0.5s;
     padding: 0 100px;
     transition: 0.5s;
-}    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .navBar .logo{
-    line-height: 100px;
     color: #fff;
     text-transform: none;
-    font-size: 32px;
-    font-weight: 600;
-    text-decoration: none;
     margin-right: 50px;
-}    
+    margin-top: 5px;
+}
 
 .navBar ul{
     list-style: none;
-    float: right;
     line-height: 70px;
     margin-right: 250px;
 }
-    
+
 .navBar ul li{
     display: inline-block;
     padding-right: 10px;
     padding-left: 10px;
 }
-    
+
 .navBar ul li a{
     color: white;
     text-decoration: none;
@@ -67,5 +66,3 @@ main{
     top: 0;
     z-index: 99;
 }
-
-    
