--- a/Turizmas Lietuvoje/CSS/style.css
+++ b/Turizmas Lietuvoje/CSS/style.css
@@ -66,3 +66,93 @@ main{
     top: 0;
     z-index: 99;
 }
+
+/*MAIN*/
+
+body{
+    margin: 0px;
+}
+
+.main-section {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url('IMG/MainPage/LEARNMORE.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.short-info {
+    text-align: center;
+    font-size: 24px;
+    color: white;
+    max-width: 600px;
+}
+
+.learn-more-btn {
+ appearance: button;
+ background-color: #1899D6;
+ border: solid transparent;
+ border-radius: 16px;
+ border-width: 0 0 4px;
+ box-sizing: border-box;
+ color: #FFFFFF;
+ cursor: pointer;
+ display: inline-block;
+ font-family: din-round,sans-serif;
+ font-size: 18px;
+ letter-spacing: .8px;
+ line-height: 20px;
+ margin: 0;
+ outline: none;
+ overflow: visible;
+ padding: 13px 16px;
+ text-align: center;
+ text-transform: uppercase;
+ touch-action: manipulation;
+ transform: translateZ(0);
+ transition: filter .2s;
+ user-select: none;
+ -webkit-user-select: none;
+ vertical-align: middle;
+ white-space: nowrap;
+ width: 160px; 
+ text-decoration: none;
+}
+
+.learn-more-btn:after {
+ background-clip: padding-box;
+ background-color: #1CB0F6;
+ border: solid transparent;
+ border-radius: 16px;
+ border-width: 0 0 4px;
+ bottom: -4px;
+ content: "";
+ left: 0;
+ position: absolute;
+ right: 0;
+ top: 0;
+ z-index: -1;
+}
+
+.learn-more-btn:main,
+.button-19:focus {
+ user-select: auto;
+}
+
+.learn-more-btn:hover:not(:disabled) {
+ filter: brightness(1.1);
+ -webkit-filter: brightness(1.1);
+}
+
+.learn-more-btn:disabled {
+ cursor: auto;
+}
+
+.learn-more-btn:active {
+ border-width: 4px 0 0;
+ background: none;
+}
