--- a/Turizmas Lietuvoje/CSS/style.css
+++ b/Turizmas Lietuvoje/CSS/style.css
@@ -74,11 +74,11 @@ body{
 }
 
 .main-section {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url('IMG/MainPage/LEARNMORE.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url('../IMG/MainPage/LEARNMORE.jpg');
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 1200px;
+    height: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: center;
