--- a/Turizmas Lietuvoje/CSS/style.css
+++ b/Turizmas Lietuvoje/CSS/style.css
@@ -5,10 +5,7 @@ color: #0174BE;
 color: #03C988;
 */
 
-main{
-    font-size: 40px;
-    line-height: 30px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
 
 /*HEADER*/
 
@@ -48,6 +45,11 @@ main{
 
 .navBar ul li a{
     color: white;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 600;
@@ -89,43 +91,54 @@ body{
     text-align: center;
     font-size: 24px;
     color: white;
-    max-width: 600px;
+}
+
+.titleTG{
+    flex-shrink: 0;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.TGshortinfo{
+    width: 984px;
+    height: 317px;
+    flex-shrink: 0;
+    color: #FFF;
+    text-align: center; 
+    font-family: Raleway;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 
 .learn-more-btn {
- appearance: button;
- background-color: #1899D6;
- border: solid transparent;
- border-radius: 16px;
- border-width: 0 0 4px;
- box-sizing: border-box;
- color: #FFFFFF;
- cursor: pointer;
- display: inline-block;
- font-family: din-round,sans-serif;
- font-size: 18px;
- letter-spacing: .8px;
- line-height: 20px;
- margin: 0;
- outline: none;
- overflow: visible;
- padding: 13px 16px;
- text-align: center;
- text-transform: uppercase;
- touch-action: manipulation;
- transform: translateZ(0);
- transition: filter .2s;
- user-select: none;
- -webkit-user-select: none;
- vertical-align: middle;
- white-space: nowrap;
- width: 160px; 
- text-decoration: none;
+    display: flex; 
+    width: 250px; 
+    height: 70px; 
+    padding: 16px 32px; 
+    justify-content: center; 
+    align-items: center; 
+    gap: 10px; 
+    flex-shrink: 0; 
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    text-decoration: none;
+    border-radius: 10px; 
+    background: #0C356A; 
+    box-shadow: 0px 7px 21px 0px rgba(37, 44, 97, 0.20), 0px 3px 8px 0px rgba(136, 144, 194, 0.25);
 }
 
 .learn-more-btn:after {
  background-clip: padding-box;
- background-color: #1CB0F6;
+ background-color: #165ebb; 
  border: solid transparent;
  border-radius: 16px;
  border-width: 0 0 4px;
@@ -156,3 +169,31 @@ body{
  border-width: 4px 0 0;
  background: none;
 }
+
+.LankytinosVietos{
+    width: 100%;
+    height: 869px;
+}
+
+.LankytinosVietosPavadinimas{
+    width: 472px;
+    height: 60px;
+    flex-shrink: 0;
+    color: #000;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.LankytinosVietosMygtukai{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
