--- a/Turizmas Lietuvoje/CSS/style.css
+++ b/Turizmas Lietuvoje/CSS/style.css
@@ -14,66 +14,6 @@ html,body{
 
 /*HEADER*/
 
-/* .navBar{
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100px;
-    background: #0A6EBD;
-    transform: 0.5s;
-    padding: 0 100px;
-    transition: 0.5s;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navBar .logo{
-    color: #fff;
-    text-transform: none;
-    margin-right: 50px;
-    margin-top: 5px;
-}
-
-.navBar ul{
-    list-style: none;
-    line-height: 70px;
-    margin-right: 250px;
-}
-
-.navBar ul li{
-    display: inline-block;
-    padding-right: 10px;
-    padding-left: 10px;
-}
-
-.navBar ul li a{
-    color: white;
-    font-family: Raleway;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 600;
-    transition: 0.5s;
-}
-
-.navBar ul li a:hover{
-    color: #03C988;
-}
-
-.navBar.animate{
-    top: -100px;
-}
-
-.navBar.sticky{
-    top: 0;
-    z-index: 99;
-} */
-
 .navbar-light .navbar-nav .nav-link {
     color: #fff !important;  
     font-size: 22px;
@@ -181,7 +121,7 @@ body{
 
 .LankytinosVietos{
     width: 100%;
-    height: 869px;
+    height: 100px;
 }
 
 .LankytinosVietosPavadinimas{
@@ -205,6 +145,66 @@ body{
         margin-top: 60px; 
     }
 }
+
+/*Slider*/
+#carouselExample {
+    position: relative;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 100px;
+  }
+  
+  .carousel-inner .card {
+    height: 500px;
+  }
+  
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+  
+  .btn-primary {
+    background-color: blue;
+    border-color: blue;
+  }
+  
+  .carousel-control-prev,
+  .carousel-control-next {
+    width: 40px !important;
+    height: 40px !important;
+    border-radius: 50% !important;
+    background-color: #0A6EBD !important;
+    border-color: #0A6EBD !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    position: absolute !important;
+    top: 50% !important;
+    transform: translateY(-50%) !important;
+    z-index: 1001 !important;
+  }
+  
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    background-color: transparent;
+    color: white;
+    font-size: 20px; 
+  }
+  
+  .carousel-control-prev {
+    left: -50px !important;
+  }
+  
+  .carousel-control-next {
+    right: -50px !important;
+  }
+  
+  .card-img-top {
+    height: 250px;
+    object-fit: cover;
+  }
 
 /*FOOTER*/
 body {
