--- a/Turizmas Lietuvoje/CSS/kontaktai.css
+++ b/Turizmas Lietuvoje/CSS/kontaktai.css
@@ -29,11 +29,31 @@ html,body{
     background-color: #0A6EBD;
 }
 
-/*MAIN*/
-.kontaktai{
-    width: 100%;
-    height: 1000px;
+/* CONTACT INFO */
+
+.contact-info p {
+    margin-bottom: 20px; 
+    padding-left: 100px; 
+    font-family: 'Raleway', sans-serif; 
 }
+
+.contact-info strong {
+    font-family: 'Raleway', sans-serif; 
+}
+
+.contact-info a {
+    font-family: 'Raleway', sans-serif; 
+}
+
+.contact-header {
+    padding: 50px 0;
+    margin-left: 100px; 
+}
+
+.contact-info {
+    padding: 10px 0; 
+}
+
 
 /*FOOTER*/
 body {
@@ -69,5 +89,34 @@ footer {
 @media only screen and (max-width: 767px) {
     footer {
         font-size: 16px; 
+    }
+}
+
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 767px) {
+    .navbar-light .navbar-nav .nav-link {
+        font-size: 16px;
+    }
+
+    .contact-info p,
+    .contact-header {
+        padding-left: 10px; 
+        padding-right: 10px; 
+        margin-left: 0; 
+    }
+
+    .contact-info,
+    .contact-header {
+        padding: 10px 0; 
+    }
+
+    .contact-header h2 {
+        margin-left: 10px; 
+        margin-right: 10px; 
+    }
+
+    footer {
+        font-size: 14px;
     }
 }
