--- a/Turizmas Lietuvoje/CSS/kontaktai.css
+++ b/Turizmas Lietuvoje/CSS/kontaktai.css
@@ -29,6 +29,17 @@ html,body{
     background-color: #0A6EBD;
 }
 
+.custom-toggler {
+    color: white !important;
+}
+.navbar-light .navbar-toggler {
+    color: rgb(255, 255, 255) !important;
+    border-color: rgb(255, 255, 255) !important;
+}
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+  }
+
 /* CONTACT INFO */
 
 .contact-info p {
@@ -92,6 +103,14 @@ footer {
     }
 }
 
+.footerLogoInfo{
+    text-decoration: none; 
+    color: white; 
+}
+
+.footerLogoInfo:visited {
+    color: white; 
+}
 
 /* MEDIA QUERIES */
 @media only screen and (max-width: 767px) {
