--- a/Turizmas Lietuvoje/CSS/zemelapis.css
+++ b/Turizmas Lietuvoje/CSS/zemelapis.css
@@ -40,6 +40,23 @@ html,body{
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
   }
 
+  .navbar-nav .nav-item .lang-btn {
+    font-size: 15px;
+    line-height: 1.5; 
+    vertical-align: middle;
+    margin-top: 6px; 
+}
+
+.navbar-nav .nav-item:nth-child(3) {
+    margin-right: 30px; 
+}
+
+@media only screen and (max-width: 767px) {
+    .navbar-nav .nav-item:nth-child(3) {
+        margin-right: 20px; 
+    }
+}
+
 /*MAIN*/
 .kontaktai{
     width: 100%;
