--- a/Turizmas Lietuvoje/CSS/kontaktai.css
+++ b/Turizmas Lietuvoje/CSS/kontaktai.css
@@ -118,13 +118,17 @@ footer {
     align-items: center;
 }
 
-.footer-info{
-    text-align: center;
+.footer-info {
+    text-align: left; 
+    font-size: 16px; 
+    line-height: 0.5; 
+    padding-left: 20px;
+    padding-top: 10px;
 }
 
 @media only screen and (max-width: 767px) {
     footer {
-        font-size: 16px; 
+        font-size: 14px; 
     }
 }
 
