--- a/Turizmas Lietuvoje/CSS/style.css
+++ b/Turizmas Lietuvoje/CSS/style.css
@@ -277,8 +277,12 @@ footer {
     align-items: center;
 }
 
-.footer-info{
-    text-align: center;
+.footer-info {
+    text-align: left; 
+    font-size: 16px; 
+    line-height: 0.5; 
+    padding-left: 20px;
+    padding-top: 10px;
 }
 
 .footerLogoInfo{
@@ -292,6 +296,6 @@ footer {
 
 @media only screen and (max-width: 767px) {
     footer {
-        font-size: 16px; 
+        font-size: 14px; 
     }
 }
